added SchallTankPlatoon optional dependency, added english locale strings for Concrete version

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,17 +1,21 @@
 [technology-name]
-shorewall-tech=Shore Walls
+shorewall-tech=Shore walls
 
 [technology-description]
-shorewall-tech=Build Walls in shallow water
+shorewall-tech=Build walls in shallow water
 
 [recipe-name]
-shorewall-recipe=Shore Wall
+shorewall-recipe=Shore wall
+shorewall-concrete-recipe=Concrete Shore wall
 
 [item-name]
-shorewall-item=Shore Wall
+shorewall-item=Shore wall
+shorewall-concrete-item=Concrete Shore wall
 
 [item-description]
 shorewall-item=Buildable in shallow water
+shorewall-concrete-item=Buildable in shallow water
 
 [entity-name]
-shorewall-entity=Shore Wall
+shorewall-entity=Shore wall
+shorewall-concrete-entity=Concrete Shore wall
